--- a/src/LayoutRewrite/bower.json
+++ b/src/LayoutRewrite/bower.json
@@ -8,7 +8,9 @@
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "polymer": "Polymer/polymer#^1.2.0",
-    "app-layout": "PolymerLabs/app-layout#^0.0.15"
+    "app-layout": "PolymerLabs/app-layout#^0.0.15",
+    "paper-listbox": "polymerelements/paper-listbox#^1.1.2",
+    "carbon-route": "PolymerElements/carbon-route#^0.8.4"
   },
   "devDependencies": {},
   "ignore": []
