--- a/src/LayoutRewrite/bower.json
+++ b/src/LayoutRewrite/bower.json
@@ -10,7 +10,8 @@
     "polymer": "Polymer/polymer#^1.2.0",
     "app-layout": "PolymerLabs/app-layout#^0.0.15",
     "paper-listbox": "polymerelements/paper-listbox#^1.1.2",
-    "carbon-route": "PolymerElements/carbon-route#^0.8.4"
+    "carbon-route": "PolymerElements/carbon-route#^0.8.4",
+    "iron-signals": "PolymerElements/iron-signals#^1.0.3"
   },
   "devDependencies": {},
   "ignore": []
