--- a/src/AuthExample/package.json
+++ b/src/AuthExample/package.json
@@ -4,6 +4,7 @@
     "browser-sync": "^2.7.7",
     "connect-history-api-fallback": "^1.1.0",
     "del": "^2.0.2",
+    "eslint": "^2.8.0",
     "glob-all": "^3.0.1",
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "^3.1.0",
@@ -22,6 +23,8 @@
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^2.1.0",
     "gulp-vulcanize": "^6.0.0",
+    "jscs": "^3.0.3",
+    "jshint": "^2.9.2",
     "merge-stream": "^1.0.0",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.0.2",
