--- a/src/AuthExample/bower.json
+++ b/src/AuthExample/bower.json
@@ -11,7 +11,8 @@
     "app-layout": "PolymerLabs/app-layout#^0.0.15",
     "paper-listbox": "polymerelements/paper-listbox#^1.1.2",
     "carbon-route": "PolymerElements/carbon-route#^0.8.4",
-    "iron-signals": "PolymerElements/iron-signals#^1.0.3"
+    "iron-signals": "PolymerElements/iron-signals#^1.0.3",
+    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.5"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
