Add configuration options support

--- a/src/AuthExample/appsettings.json
+++ b/src/AuthExample/appsettings.json
@@ -6,5 +6,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Auth0": {
+    "ClientId": "{CLIENT_ID}",
+    "Domain": "{DOMAIN}"
   }
 }
