--- a/src/AuthExample/project.json
+++ b/src/AuthExample/project.json
@@ -8,9 +8,11 @@
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0-rc2-20581",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-20581",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0-rc2-20581",
+    "Microsoft.Extensions.Configuration": "1.0.0-rc2-*",
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0-rc2-20581",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0-rc2-20581",
     "Microsoft.Extensions.Configuration.Json": "1.0.0-rc2-20581",
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0-rc2-*",
     "Microsoft.Extensions.Logging": "1.0.0-rc2-20581",
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-20581",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc2-20581"
